Fixed spacing on first two sections of landing page, itch is now share your games, added left padding in resources

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -114,6 +114,7 @@
   font-family: 'Courier New', Courier, monospace; /* Monospace font for a techy look */
   text-align: left;
   margin: 16px;
+  padding-left: 8vw;
   /* padding-right: 11vw;
   padding-left: 11vw; */
 }
@@ -124,6 +125,7 @@
   text-align: left;
   justify-content: center;
   margin: 16px;
+  padding-left: 8vw;
   list-style-position: inside; /* Center align bullets */
 }
 
@@ -184,14 +186,16 @@
 }
 
 .section{
-  height: 100vh;
+  min-height: 100vh;
   width: 90vw;
   padding-right: 10vw;
   padding-left: 10vw;
   justify-self: center;
   justify-items: center;
   overflow-wrap: break-word;
+  /* overflow: auto; */
   margin-top: 64px;
+  /* margin-bottom: 64px; */
   color: #00ff00; /* Matrix-like green color */
   font-family: 'Courier New', Courier, monospace; /* Monospace font for a techy look */
   /* text-shadow: 0 0 5px #00ff00, 0 0 10px #00ff00, 0 0 15px #00ff00; Glowing effect */
