--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -13,7 +13,7 @@
   --button-primary-hover: #383838;
   --button-secondary-hover: #f2f2f2; */
 
-  display: grid;
+  /* display: grid; */
   grid-template-rows: 20px 1fr 20px;
   align-items: center;
   justify-items: center;
@@ -34,13 +34,13 @@
     --button-secondary-hover: #1a1a1a;
   }
 }
-
+/* 
 .main {
   display: flex;
   flex-direction: column;
   gap: 32px;
   grid-row-start: 2;
-}
+} */
 
 .main ol {
   font-family: 'Courier New', Courier, monospace; /*'Press Start 2P', cursive;*/
